Currently pending issues: 
- Check for new frags.


31-07-13 [MHC] Fixed:
+ No files saved from the output dialog.
+ Restore debug build in VS
+ Restore Qt Creator build
+ Buffer size: tile preview
+ Knighty collection, cleanup
+ Remove 'Replace all floats' preferences and code.
30-07-13 [MHC]   New High-resolution render dialog and new time and subframe control. Buffer size can now be controlled explicitly.
				 The old 'backbufferCounter' is now 'subframe'
28-06-13 [MHC]   Bugfix: now uses a triangle instead of a quad to render shaders.
19-11-12 [MHC]
				 Animations now support progressive rendering
				 Tile rendering now has added padding option
				 Fixed Animation offset bug
				 Brute raytracer
				 Fixed DepthBufferShader bug
				 New sigmoid tone mapper
				 IBL raytracer can now rotate maps

20-08-12 -- v0.9.12 release --

20-08-12 [MHC] Added tutorial: "25 - Image Based Lighting.frag" 
19-08-12 [MHC]	Added a welcome/warning notice.
				Added a crash during start detection mechanism.
				Updated shadows in DE-raytracer. Still not good.
				Added 'tetrahedron-alternative.frag'
				Update about page.

16-08-12 [MHC] Restored 'reflections' in DE-raytracer. Removed bounding sphere check.
			   Renamed 'Env-DE-Raytracer.frag' to 'IBL-Raytracer.frag'
				Include old DE-Raytracer versions.
				 "#include "DE-Raytracer-v0.9.10.frag"
				 "#include "DE-Raytracer-v0.9.1.frag"
				When opening a not-runnable fragment, categories persist.

30-07-12 [MHC]
Now does a 'reset all' when loading new system (otherwise too confusing).

22-07-12 [MHC]
Filenames in presets has a whitespace bug.
An 'uniform sampler2D' with non existent file will not create dialog. 
Using arrow keys now work when sliders have focus.

15-07-12 [MHC]
Added support for choosing '#include' through editor context menu.
More host defines:
 #define SubframeMax 0
 #define DontClearOnChange   <- when sliders/camera changes, the backbuffer is not cleared.