@@ -1,6 +1,7 @@
 Currently pending issues: 
 - Check for new frags.
-
+- The texture error.
+- Old (non-progressive) modes must be checked. They should not burn GPU.
 
 31-07-13 [MHC] Fixed:
 + No files saved from the output dialog.
